--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>ClientesApp</title>
+  <title>SanBau</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!--<link rel="stylesheet" href="assets/css/normalize.css">-->
 </head>
 <body>
   <app-root></app-root>
